--- a/Do-Pinterest/Base.lproj/Main.storyboard
+++ b/Do-Pinterest/Base.lproj/Main.storyboard
@@ -47,11 +47,11 @@
                                     <size key="itemSize" width="346" height="347"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                    <inset key="sectionInset" minX="10" minY="10" maxX="10" maxY="10"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PhotoCell" id="R96-9q-Rr4">
-                                        <rect key="frame" x="14.5" y="0.0" width="346" height="347"/>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PhotoCell" id="R96-9q-Rr4" customClass="PhotoCell" customModule="Do_Pinterest" customModuleProvider="target">
+                                        <rect key="frame" x="14.5" y="10" width="346" height="347"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
                                             <rect key="frame" x="0.0" y="0.0" width="346" height="347"/>
@@ -78,10 +78,14 @@
                                                 <integer key="value" value="10"/>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <outlet property="imageView" destination="eoR-D1-0SA" id="EaX-zX-ATq"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                                 <connections>
                                     <outlet property="dataSource" destination="BYZ-38-t0r" id="UHK-8S-Nfm"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="Wc2-fF-NuU"/>
                                 </connections>
                             </collectionView>
                         </subviews>
